err/slgaas-cli.err
Listing '.'...
Listing './bin'...
Compiling './bin/config-gw.py'...
***   File "./bin/config-gw.py", line 24
    print 'Error: can not load python module slgaas_cli.cliutils: '+str(e)
                                                                  ^
SyntaxError: invalid syntax

Compiling './bin/manage-gw.py'...
***   File "./bin/manage-gw.py", line 19
    print 'Error: can not load python module slgaas_cli.cliutils: '+str(e)
                                                                  ^
SyntaxError: invalid syntax

Compiling './bin/order-gw.py'...
***   File "./bin/order-gw.py", line 25
    print 'Error: can not load python module slgaas_cli.cliutils: '+str(e)
                                                                  ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.6.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.6.5.egg-info'...
Listing './lib/python3.5/site-packages/slgaas_cli'...
Compiling './lib/python3.5/site-packages/slgaas_cli/cliutils.py'...
***   File "./lib/python3.5/site-packages/slgaas_cli/cliutils.py", line 14
    print 'Error:', msg
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slgaas_cli-1.0.61.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
